# fskeleton

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  configure.ac
builds/msvc/: msvc10.sln
builds/msvc/fskeleton/: fskeleton.vcxproj  fskeleton.vcxproj.filters
include/: fskeleton.h
src/: fskeleton.c
