AC_INIT([libfskeleton], [0.0.0], [crossroads-dev@groups.crossroads.io], [libfskeleton], [www.crossroads.io])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 -Wall no-define])

AC_PROG_CC

LIBCPREFIX_CONFIG_LIBTOOL
AC_LIBTOOL_WIN32_DLL
AC_PROG_LIBTOOL

AC_SUBST([FSKELETON_VERSION], [0:0:0])

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
